--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,8 @@ html[dataTheme = 'dark'] {
 html {
     scroll-behavior: auto; //smooth - Doesn't work with angular anchor scrolling
     -webkit-text-size-adjust: 100%; // Apple stuff: Prevent font scaling in landscape while allowing user zoom
+    // max-height: max-content;
+    // overscroll-behavior: none; //needed for bouncing on scroll end???
 }
 
 body {
@@ -45,7 +47,6 @@ body {
     margin: auto;
     font-size: 1.1rem;
     transition: all 0.5s;
-    overscroll-behavior: none; //needed for bouncing on scroll end???
 }
 hr {
     border-color: var(--lightRed);
